objects/Spark_Config__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <description>Application User Id (from developer.ciscospark.com)</description>
        <label>ApplicationId</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationScopes__c</fullName>
        <description>Application Scopes provide the scope for the user capabilities i.e read and write for the spark object.</description>
        <label>ApplicationScopes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>spark:memberships_read</fullName>
                </value>
                <value>
                    <fullName>spark:memberships_write</fullName>
                </value>
                <value>
                    <fullName>spark:messages_read</fullName>
                </value>
                <value>
                    <fullName>spark:messages_write</fullName>
                </value>
                <value>
                    <fullName>spark:people_read</fullName>
                </value>
                <value>
                    <fullName>spark:rooms_read</fullName>
                </value>
                <value>
                    <fullName>spark:rooms_write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationSecret__c</fullName>
        <description>Application User Password (from developer.ciscospark.com)</description>
        <label>ApplicationSecret</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BearerToken__c</fullName>
        <description>Stores the Bearer Token to authenticate to the spark cloud.</description>
        <label>BearerToken</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfiguredObjects__c</fullName>
        <description>Select Which objects should have the Spark Integration</description>
        <label>ConfiguredObjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MachineId__c</fullName>
        <description>Machine Account Username</description>
        <label>MachineId</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MachineOrg__c</fullName>
        <description>Machine Org is the UUID for Cisco</description>
        <label>MachineOrg</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MachineSecret__c</fullName>
        <description>Machine Account Password</description>
        <label>MachineSecret</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MachineUid__c</fullName>
        <description>UUID specific to Spark SFDC Integration</description>
        <label>MachineUid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerFields__c</fullName>
        <description>A JSON string containing tracked trigger fields and their associated current values</description>
        <label>TriggerFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <description>Stores the Spark Integration Configuration</description>
    <label>Spark_Config</label>
    <nameField>
        <label>Spark_Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spark_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>